karl package Changelog
======================

Unreleased
----------

3.1 (2009-06-16)
----------------

- LP #387390:  add / enable delete profile view, deleting the corresponding
  user as well.

- Added optional 'reason' argument to 'logout_view', to enable overriding
  the header value passed explaining why the user landed on the login form.
  Use this argument when returning the logout response from another view.
  
- LP #385580: Have the "Back to Parent" link not be full width on the <a>

- LP #385268: Email index is converted to lower case to facilitate case
  insensitive search.
  
- LP #385636: Better handling of existing users in invite new users form.

3.0 (2009-06-15)
----------------

- Intersect text index search results last for advanced search,
  hopefully improving relevance ranking.

- Micro-speedups for "communities" page.

- Consolidated three showtag views to use same code.

- Filter items in showtag view according to view permission of authenticated 
  user.
  
- Make sure new user profiles get initialized with __acl__.

osi-production-20090611 (2009-06-11)
------------------------------------

- Temporarily revert commit to use "natural" order of text index
  committed in osi-production-20090610 because caused search queries
  to ignore catalog security info.

osi-production-20090610 (2009-06-10)
------------------------------------

- LP #384096: Updated code for generic search to use "natural" order of
  text index, where possible.

- Fixed 'karl.views.people.show_profile_view' not to blow up when
  userid != login.

- Add member_name index for text searching of just member names.
  NOTE: This requires running reindex_catalog -p /profiles

- Improved performance of member search widget in add_member_view

osi-production-20090608 (2009-06-08)
------------------------------------

- Switched to using a multi-adapter for footer (replaces hard-wired OSI
  branding).

osi-production-20090603 (2009-06-03)
------------------------------------
